studyId visibility fixes, timezone error checking fixes

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -68,7 +68,7 @@ body {
 a.btn {
   font-size: @baseFontSize;
 }
-#profileStudyIDContainer {
+#profileStudyIDContainer, #studyIdContainer {
   display: none;
 }
 #tnthNavWrapper {
@@ -725,14 +725,14 @@ input.clinic {
   margin-top: 0.5em;
 }
 #createProfileForm #studyId {
-  width:350px; 
+  width:350px;
   max-width: 100%;
 }
 #noEmailContainer {
   margin-top: 0.3em;
 }
 #noEmail {
-  position:relative; 
+  position:relative;
   top:-1px
 }
 #profileSendEmailContainer {
